Fix icon button spacing, make it consistent with margin defined in core
Since a margin was added to adjacent sibling spans of icons (https://gerrit.wikimedia.org/r/c/mediawiki/core/+/736919), Vector icon buttons have had too much spacing. This patch removes the extra spacing defined in Vector CSS and the accidental whitespace that was included in the ULS buttons..

--- a/resources/skins.vector.styles/components/UserLinks.less
+++ b/resources/skins.vector.styles/components/UserLinks.less
@@ -25,10 +25,6 @@
 				a {
 					color: @color-base;
 					text-decoration: none;
-
-					.mw-ui-icon {
-						margin-right: 4px;
-					}
 				}
 
 				// Below tablet threshold, all menu items except the notification icons will collapse into the user menu
